<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_edit_book"
        android:icon="@drawable/ic_mode_edit_white_24dp"
        android:title="@string/action_edit_book"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_add_note"
        android:icon="@drawable/ic_note_add_white_24dp"
        android:title="@string/action_add_note"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_delete"
        android:title="@string/action_delete"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_progress"
        android:title="@string/action_set_progresss"
        app:showAsAction="never"/>

</menu>