<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".BookInfoActivity">

        <ImageView
            android:id="@+id/info_book_image"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Title field -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/CategoryStyle"
                    android:text="@string/book_title"/>

                <TextView
                    android:id="@+id/info_book_title"
                    style="@style/FieldStyle"
                    tools:text="Android"/>
            </LinearLayout>

            <!-- Author field -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/CategoryStyle"
                    android:text="@string/book_author"/>

                <TextView
                    android:id="@+id/info_book_author"
                    style="@style/FieldStyle"
                    tools:text="Android"/>
            </LinearLayout>

            <!-- Category field -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/CategoryStyle"
                    android:text="@string/book_category"/>

                <TextView
                    android:id="@+id/info_book_category"
                    style="@style/FieldStyle"
                    tools:text="Android"/>
            </LinearLayout>

            <!-- Rating field -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/CategoryStyle"
                    android:layout_width="wrap_content"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    android:text="@string/category_priority"/>

                <RatingBar
                    android:id="@+id/info_book_rating"
                    style="?android:attr/ratingBarStyleIndicator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="8dp"
                    android:isIndicator="true"
                    android:numStars="5"
                    android:stepSize="1"/>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>
